# Ondeck365

./: .gitignore  LEARNINGS.md  NOTES.md  compute_synthetic_expecteds.py  pg_manifest.json  pyproject.toml
ondeck/layout/: detect.py
ondeck/parse/: color.py  font_calibration.py  images.py  media.py  pptx.py  shapes.py  slide.py  svg.py  text.py  theme.py
ondeck/render/: css.py  desktop.py  fonts.py  html.py  mobile.py
ondeck/render/templates/: _shared.py  card_grid.py  cover.py  media_showcase.py  section_divider.py  title_stats.py  two_column.py
ondeck/transform/: image.py  video.py
phase_1c/: color_evidence.md  transform_spec.md
phase_1c/fixtures/: synthetic_01.expected.json  synthetic_01.xml  synthetic_02.expected.json  synthetic_02.xml  synthetic_03.expected.json  synthetic_03.xml  theme_demert_default_office.expected.json  theme_fillstyle_0002.expected.json  theme_fillstyle_0002.xml  theme_fillstyle_0003.expected.json  theme_fillstyle_0003.xml  theme_fillstyle_1002.expected.json  theme_fillstyle_1002.xml  theme_fillstyle_1003.expected.json  theme_fillstyle_1003.xml
tests/: test_color_resolver.py
