[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "ondeck"
version = "0.1.0"
description = "Convert PowerPoint decks (.pptx) to shareable HTML"
requires-python = ">=3.9"
dependencies = [
    "python-pptx>=1.0",
    "Pillow>=10.0",
]

[tool.setuptools.packages.find]
where = ["."]
include = ["ondeck*"]
